---------------------------------------------------------------------------
Version 5.8.1  [V5-stable] (rgerhards), 2011-04-??
- bugfix: rate-limiting inside imuxsock did not work 100% correct
  reason was that a global config variable was invalidly accessed where a
  listener variable should have been used.
  Also performance-improved the case when rate limiting is turned off (this
  is a very unintrusive change, thus done directly to the stable version).
- bugfix: $myhostname not available in RainerScript (and no error message)
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=233
- bugfix: memory and file descriptor leak in stream processing
  Leaks could occur under some circumstances if the file stream handler
  errored out during the open call. Among others, this could cause very
  big memory leaks if there were a problem with unreadable disk queue
  files. In regard to the memory leak, this
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=256
- bugfix: doc for impstats had wrong config statements
  also, config statements were named a bit inconsistent, resolved that
  problem by introducing an alias and only documenting the consistent
  statements
  Thanks to Marcin for bringing up this problem.
- bugfix: IPv6-address could not be specified in omrelp
  this was due to improper parsing of ":"
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=250
- bugfix: TCP connection invalidly aborted when messages needed to be
  discarded (due to QUEUE_FULL or similar problem)
- bugfix: $LocalHostName was not honored under all circumstances
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=258
- bugfix(minor): improper template function call in syslogd.c
---------------------------------------------------------------------------
Version 5.8.0  [V5-stable] (rgerhards), 2011-04-12

This is the new v5-stable branch, importing all feature from the 5.7.x
versions. To see what has changed in regard to the previous v5-stable,
check the Changelog for 5.7.x below.